# blogue

./: .gitignore  Makefile  about.md  blogue.cabal  build.sh  package.json  package.yaml  pandoc-filter-katex.js  postcss.config.js  site.hs  stack.yaml  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
css/: default.css  default.less  default.scss  espresso.css  fonts.css  fonts.scss  haddock.css  kate.css  monochrome.css  pygments.css  sidenotes.css  sidenotes.scss  tango.css  zenburn.css
drafts/: 1896-emma-goldman-anarchy-and-the-sex-question.md  1910-emma-goldman-anarchism-and-other-essays.md  2018-07-05-development-safety.md  2024-02-04-maybe-dont-prefer-table-driven-tests.md  template.md
hakyll-site/: main.hs
js/: default.js  main.js
posts/: 2006-11-19-scientific-debugging.md  2013-01-13-continuous-integration-for-github-pull-requests-with-teamcity.md  2013-03-16-ruby-property-testing-with-rantly.md  2013-04-28-mutant-refactoring-powers.md  2013-05-31-page-objects-in-ruby.md  2013-06-30-tail-calls-vs-laziness.md  2013-07-31-cleaning-tables-with-sequel.md  2013-08-31-posix-threads-and-fork2-on-not-crossing-the-streams.md  2013-09-28-precise-scheduling-with-rabbitmq.md  2013-09-30-my-little-backpressure-flow-control-is-magic.md  2013-10-31-tell-dont-ask-with-sinatra-handlers.md  2014-09-30-defn-reloaded-main.md  2014-10-31-clojure-component-patterns.md  2016-01-27-rules-based-mio-chat-example.md  2016-03-26-fnords.md  2016-05-23-hybrid-clocks.md  2016-10-24-testing-as-questioning.md  2016-12-09-desire-without-objects.md  (+20 more)
(+23 files in other folders)
