name:               blogue
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , process == 1.4.*
                  , hakyll == 4.9.*
                  , hakyll-contrib-hyphenation == 0.1.0.*
                  , hakyll-sass >= 0.2.3
                  , hsass >= 0.4.0
                  , aeson >= 1.0.2.1
                  , bytestring >= 0.10.8.1
                  , containers >= 0.5.7.1
  ghc-options:      -threaded
  default-language: Haskell2010
  -- ld-options: -static
